# upcaste

./: .gitignore  LICENSE.md  README.md  TODO  TODO.md  aclocal.m4  configure  configure.ac  install-sh
depend/: .gitignore
include/upcore/up/: allocator.hpp  atomic.hpp  bitwise.hpp  byteswap.hpp  cassert.hpp  cctype.hpp  cerrno.hpp  cfenv.hpp  cfloat.hpp  cinttypes.hpp  ciso646.hpp  climits.hpp  clocale.hpp  cmath.hpp  csetjmp.hpp  csignal.hpp  cstdalign.hpp  cstdarg.hpp  cstdatomic.hpp  cstdbool.hpp  cstddef.hpp  cstdint.hpp  cstdio.hpp  cstdlib.hpp  cstring.hpp  cthreads.hpp  ctime.hpp  cuchar.hpp  cuctype.hpp  cwchar.hpp  cwctype.hpp  densemap.hpp  denseset.hpp  filesystem.hpp  hash.hpp  hashmap.hpp  hashset.hpp  ieee754.hpp  limits.hpp  list.hpp  (+14 more)
include/upcore/up/detail/: aligned_alloc_c11.inl  aligned_alloc_default.inl  aligned_alloc_generic.inl  aligned_alloc_posix.inl  atomic_cxx11.inl  atomic_fence_gcc_x86_x64.inl  atomic_fence_msvc_x86_x64.inl  atomic_flag_gcc_x86_x64.inl  atomic_flag_msvc_x86_x64.inl  atomic_generic.inl  atomic_pause_gcc_x86_x64.inl  atomic_pause_msvc_x86_x64.inl  atomic_storage_msvc_x86_x64.inl  atomic_yield_gcc_x86_x64.inl  atomic_yield_msvc_x86_x64.inl  bitwise_gcc.inl  bitwise_msvc.inl  byteswap_clang.inl  byteswap_gcc_arm.inl  byteswap_gcc_x86_x64.inl  byteswap_msvc.inl  cctype_msvc.inl  cctype_posix.inl  cerrno_windows.inl  cfenv_c99.inl  cfenv_msvc.inl  cfloat_gcc.inl  cfloat_msvc.inl  cinttypes_c99.inl  cinttypes_cxx11.inl  cinttypes_msvc.inl  clocale_msvc.inl  clocale_posix.inl  cmath_c99.inl  cmath_cxx11.inl  cmath_default.inl  cmath_generic.inl  cstdatomic_cxx11.inl  cstdatomic_default.inl  cstdatomic_fence_gcc_x86_x64.inl  (+35 more)
include/upcore/up/math/: float4.hpp  float4x2.hpp  float4x3.hpp  float4x4.hpp  int4.hpp  int4x2.hpp  int4x3.hpp  int4x4.hpp  mathfwd.hpp  matrices.hpp  uint4.hpp  uint4x2.hpp  uint4x3.hpp  uint4x4.hpp  vectors.hpp
include/upcore/up/prolog/: .gitignore  apple.hpp  clang.hpp  gcc.hpp  linux.hpp  msvc.hpp  windows.hpp
include/upsystem/up/: system.hpp
include/upsystem/up/system/: systemfwd.hpp
include/uptest/up/: test.hpp
include/uptest/up/test/: default_filter.hpp  fixture_name_filter.hpp  identity_filter.hpp  test_benchmark.hpp  test_benchmark_result.hpp  test_case.hpp  test_error.hpp  test_filter.hpp  test_listener.hpp  test_object.hpp  test_result.hpp  test_runner.hpp  test_suite.hpp  testfwd.hpp
project/m4/: ax_check_compile_flag.m4  ax_gcc_version.m4
project/msvs11/: .gitignore  Upcaste.Cpp.Common.props  Upcaste.Cpp.Configuration.Debug.props  Upcaste.Cpp.Configuration.Gold.props  Upcaste.Cpp.Configuration.Platinum.props  Upcaste.Cpp.Configuration.Release.props  Upcaste.Cpp.Configuration.Silver.props  Upcaste.Cpp.Linkage.Shared.props  Upcaste.Cpp.Linkage.Static.props  Upcaste.Cpp.Platform.Win32.props  Upcaste.Cpp.Platform.x64.props  Upcaste.Cpp.Target.Application.props  Upcaste.Cpp.Target.Console.props  Upcaste.Cpp.Target.DynamicLibrary.props  Upcaste.Cpp.Target.StaticLibrary.props  Upcaste.sln  generatesolution.py
project/msvs11/benchmarks/: upcompute_bench.vcxproj  upcompute_bench.vcxproj.filters  upcore_bench.vcxproj  upcore_bench.vcxproj.filters  upsystem_bench.vcxproj  upsystem_bench.vcxproj.filters
project/msvs11/libraries/: .gitignore  glew.vcxproj  glew.vcxproj.filters  upcompute.vcxproj  upcompute.vcxproj.filters  upcore.vcxproj  upcore.vcxproj.filters  upsystem.vcxproj  upsystem.vcxproj.filters  uptest.vcxproj  uptest.vcxproj.filters
project/msvs11/samples/: cubecast.vcxproj  cubecast.vcxproj.filters  raycast.vcxproj  raycast.vcxproj.filters
project/msvs11/tests/: upcore_tests.vcxproj  upcore_tests.vcxproj.filters
project/tundra/: Makefile.in  target.hpp.in  tundra.lua.in
sample/raycast/data/: kernel.cl
sample/raycast/src/: raycast.cpp
share/upcore/: english.txt  modela.sexp  modele.sexp  printf_float_data.txt  printf_int_data.txt  printf_llong_data.txt  printf_pointer_data.txt  printf_string_data.txt  printf_uint_data.txt
src/glew/src/: glew.c
src/upcaste-hash/src/: main.cpp
src/upcore/bench/: bitwise.cpp  clocale.cpp  container.maps.cpp  cstdio.printf.cpp  cstdlib.strtoint.cpp  cstdlib.strtoreal.cpp  cstring.hash.cpp  cstrings.utf16.cpp  cstrings.utf32.cpp  cstrings.utf8.cpp  math.float4.cpp  memory.allocators.cpp  memory.hash.cpp  sexp.cpp
src/upcore/src/: allocator.cpp  cassert.cpp  cstdalign.cpp  log.cpp  sparse.cpp  type_traits.cpp  upcore.cpp  upcore.x64.def  upcore.x86.def  utility.cpp
src/upcore/src/atomic/: atomic_extern_templates.cpp  atomic_flag_spin_lock_backoff_explicit.cpp  atomic_flag_spin_lock_explicit.cpp  atomic_storage_locks.cpp
src/upcore/src/cinttypes/: strtoimax.cpp  strtoumax.cpp  wcstoimax.cpp  wcstoumax.cpp
src/upcore/src/cmath/: fpclassify.cpp  fpclassifyf.cpp  fpclassifyl.cpp  frexp10.cpp  frexp10f.cpp  frexp10l.cpp  nan.cpp  nanf.cpp  nanl.cpp  nextafter.cpp  nextafterf.cpp  nextafterl.cpp  nextaftertoward.inl  nexttoward.cpp  nexttowardf.cpp  nexttowardl.cpp  pow10.cpp  pow10f.cpp  pow10l.cpp  signbit.cpp  signbitf.cpp  signbitl.cpp
src/upcore/src/cstdio/: asprintf.cpp  fast_asprintf.cpp  fast_fprintf.cpp  fast_print_format.cpp  fast_printf.cpp  fast_snprintf.cpp  fast_sprintf.cpp  fast_vasprintf.cpp  fast_vfprintf.cpp  fast_vprintf.cpp  fast_vsnprintf.cpp  fast_vsprintf.cpp  getdelim.cpp  getdelim.inl  getline.cpp  getline.inl  print_format.cpp  print_format.inl  print_format_flush.cpp  print_format_flush.inl  (+5 more)
src/upcore/test/: atomic.cpp  bitwise.cpp  cctype.cpp  cfenv.cpp  cfloat.cpp  clocale.cpp  cmath.cpp  cstdio.cpp  cstdlib.cpp  cstring.cpp  cwchar.cpp  densemap.cpp  denseset.cpp  hashmap.cpp  hashset.cpp  ieee754.cpp  list.cpp  random.cpp  slist.cpp  sparsemap.cpp  sparseset.cpp
src/upsystem/bench/: create_buffer.cpp  device_enumerator.cpp  device_enumerator.hpp
src/upsystem/src/: GetPreferredCpuDevices.cpp
src/uptest/driver/: console_driver.cpp
src/uptest/src/: fixture_name_filter.cpp  test_benchmark.cpp  test_case.cpp  test_error.cpp  test_listener.cpp  test_object.cpp  test_result.cpp  test_runner.cpp  test_suite.cpp
(+529 files in other folders)
